<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp"
        tools:context=".ui.SalahWaqtActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:gravity="center_horizontal"
            android:padding="2dp"
            android:text="@string/salat_wakt_time"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/headerbg"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/fajr"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:background="@drawable/detail"
            android:fontFamily="@font/raleway"
            android:lineSpacingExtra="4dp"
            android:padding="10dp"
            android:text="@string/waqt_of_fajr"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="14sp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/headerbg"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/zuhr"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:background="@drawable/detail"
            android:fontFamily="@font/raleway"
            android:lineSpacingExtra="4dp"
            android:padding="10dp"
            android:text="@string/waqt_of_zuhur"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="14sp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="10dp"
            android:background="@drawable/headerbg"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/asr"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:background="@drawable/detail"
            android:fontFamily="@font/raleway"
            android:lineSpacingExtra="4dp"
            android:padding="10dp"
            android:text="@string/waqt_of_asr"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="14sp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="10dp"
            android:background="@drawable/headerbg"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/maghrib"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:background="@drawable/detail"
            android:fontFamily="@font/raleway"
            android:lineSpacingExtra="4dp"
            android:padding="10dp"
            android:text="@string/waqt_of_magrib"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="10dp"
            android:background="@drawable/headerbg"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/isha"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:background="@drawable/detail"
            android:fontFamily="@font/raleway"
            android:lineSpacingExtra="4dp"
            android:padding="10dp"
            android:text="@string/waqt_of_isha"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="14sp" />


    </LinearLayout>
</ScrollView>