<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/adView">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            tools:context=".ui.BenifitsActivity">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/headerbg"
                android:gravity="start"
                android:padding="10dp"
                android:text="@string/benifits_fazilat_of_salah"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/detail"
                android:fontFamily="@font/raleway"
                android:lineSpacingExtra="4dp"
                android:padding="10dp"
                android:text="@string/reward_of_salat"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="14sp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="14dp"
                android:background="@drawable/headerbg"
                android:gravity="start"
                android:padding="10dp"
                android:text="@string/individual_benifits_of_5_salah"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="14dp"
                android:background="@drawable/headerbg"
                android:gravity="center_horizontal"
                android:padding="8dp"
                android:text="@string/fajr"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/detail"
                android:fontFamily="@font/raleway"
                android:lineSpacingExtra="4dp"
                android:padding="10dp"
                android:text="@string/fazr_benifits"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="14dp"
                android:background="@drawable/headerbg"
                android:gravity="center_horizontal"
                android:padding="8dp"
                android:text="@string/zuhr"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/detail"
                android:fontFamily="@font/raleway"
                android:lineSpacingExtra="4dp"
                android:padding="10dp"
                android:text="@string/zuhr_benifits"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="14dp"
                android:background="@drawable/headerbg"
                android:gravity="center_horizontal"
                android:padding="8dp"
                android:text="@string/asr"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/detail"
                android:fontFamily="@font/raleway"
                android:lineSpacingExtra="4dp"
                android:padding="10dp"
                android:text="@string/asr_benifits"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="14dp"
                android:background="@drawable/headerbg"
                android:gravity="center_horizontal"
                android:padding="8dp"
                android:text="@string/maghrib"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/detail"
                android:fontFamily="@font/raleway"
                android:lineSpacingExtra="4dp"
                android:padding="10dp"
                android:text="@string/magrib_benifits"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="14dp"
                android:background="@drawable/headerbg"
                android:gravity="center_horizontal"
                android:padding="8dp"
                android:text="@string/isha"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/detail"
                android:fontFamily="@font/raleway"
                android:lineSpacingExtra="4dp"
                android:padding="10dp"
                android:text="@string/isha_benifits"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="14sp" />


        </LinearLayout>


    </ScrollView>

    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/banner"></com.google.android.gms.ads.AdView>
</RelativeLayout>