<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="4dp"
        tools:context=".ui.AzanDuaActivity">

        <TextView
            android:id="@+id/dua_arabic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="4dp"
            android:background="@drawable/headerbg"
            android:gravity="start"
            android:lineSpacingExtra="6sp"
            android:padding="10dp"
            android:text="@string/azaan_dua_arabic"
            android:textColor="@color/white"
            android:textSize="22sp" />


        <TextView
            android:id="@+id/dua_pronounciation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dua_arabic"
            android:layout_marginTop="4dp"
            android:background="@drawable/detail"
            android:fontFamily="@font/raleway"
            android:gravity="start"
            android:padding="10dp"
            android:text="@string/azaan_dua_pronounciation"
            android:textColor="@color/white"
            android:textSize="16sp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dua_pronounciation"
            android:layout_marginTop="4dp"
            android:background="@drawable/headerbg"
            android:fontFamily="@font/raleway"
            android:gravity="start"
            android:padding="10dp"
            android:text="@string/azaan_dua_meaning"
            android:textColor="@color/white"
            android:textSize="18sp" />


    </RelativeLayout>

</ScrollView>