<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:theme="@style/ThemeOverlay.AppCompat.Light">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/player_bg"
        android:orientation="vertical"
        android:theme="@style/ThemeOverlay.AppCompat.Light">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="25dp"
            android:layout_centerInParent="true"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/nav_header_desc"
            android:src="@mipmap/new_ic_launcher" />

        <LinearLayout
            android:id="@+id/titlelayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="4dp"
                android:text="@string/theme"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="4dp"
                android:text="@string/disclaimer"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/white"
                android:textSize="12sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/titlelayout"
            android:background="@drawable/player_top" />

    </RelativeLayout>

    <include layout="@layout/auto_manual_setting_menu_item"/>
    <include layout="@layout/salah_reminder_menu_item"/>

</LinearLayout>
