<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/alarmType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_alignParentStart="true"
        android:layout_centerInParent="true"
        android:textAllCaps="false"
        android:text="@string/auto_time_detect"
        android:textSize="14sp"
        android:textColor="@color/white"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        android:layout_marginEnd="5dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/off"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:textAllCaps="true"
            android:text="@string/off"
            android:textSize="10sp"
            android:textColor="@color/white"/>

        <com.suke.widget.SwitchButton
            android:id="@+id/switchAutoManual"
            android:layout_width="50dp"
            android:layout_height="28dp"
            app:sb_checked="true"
            app:sb_background="@color/uncheckedcolor"
            app:sb_border_width="0dp"
            app:sb_button_color="@color/white"
            app:sb_checked_color="@color/checkedcolor"
            app:sb_checkline_color="@color/transparent"
            app:sb_checkline_width="0dp"
            app:sb_enable_effect="true"
            app:sb_shadow_color="@color/transparent"
            app:sb_shadow_effect="false"
            app:sb_shadow_offset="2dp"
            app:sb_shadow_radius="2dp"
            app:sb_show_indicator="false"
            app:sb_uncheck_color="@color/transparent"

            app:sb_uncheckcircle_color="@color/transparent"
            app:sb_uncheckcircle_radius="0dp"
            app:sb_uncheckcircle_width="0dp" />

        <TextView
            android:id="@+id/on"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:textAllCaps="true"
            android:text="@string/on"
            android:textSize="10sp"
            android:textColor="@color/white"/>

    </LinearLayout>

</RelativeLayout>